cabal-version:      3.0
name:               ParserState
version:            0.1.0.0
author:             Daniel Kröni
maintainer:         daniel.kroeni@fhnw.ch
build-type:         Simple

common warning
    ghc-options: -Wall

executable imp
  import:           warning
  main-is:          Lang/Imp/Main.hs
  other-modules:    Lang.Parser.Combinators, Lang.Imp.Parser, Lang.Imp.Interpreter, Lang.Imp.Ast, Lang.Imp.Pretty
  -- other-extensions:
  build-depends:       base ^>=4.16.0.0
                     , containers
  -- hs-source-dirs:
  default-language:    Haskell2010

test-suite imp-test
    import:           warning
    default-language: Haskell2010 
    type:             exitcode-stdio-1.0
    main-is:          Lang/Test/Tests.hs
    other-modules:    Lang.Parser.Combinators, Lang.Imp.Parser, Lang.Imp.Interpreter, Lang.Imp.Ast, Lang.Imp.Pretty
    build-depends:
        base ^>=4.16.0.0,
        containers,
        hspec ==2.11.4,
        hspec-contrib,
        QuickCheck,
        HUnit
